# asha

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  decompilation.rs  disassembly.rs  fields.rs  instructions.rs  lib.rs  main.rs  opcodes.rs
src/executables/: hello
